made about pages images more responsive

--- a/about.html
+++ b/about.html
@@ -66,21 +66,21 @@
         <div class="col-sm-4 mb-5">
           <img
             src="/refers/images/yoga.png"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded about-images"
             alt="yoga"
           />
         </div>
         <div class="col-sm-4 mb-5">
           <img
             src="/refers/images/weather.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded about-images"
             alt="weather app"
           />
         </div>
         <div class="col-sm-4 mb-5">
           <img
             src="/refers/images/yogurt.png"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded about-images"
             alt="Cake app"
           />
         </div>
@@ -93,7 +93,7 @@
         You can contact me via my email
         <a href="mailto:gugulethumdluli98@gmail.com" class="email-link">
           gugulethumdluli98@gmail.com</a
-        >. You can also check me on my socials linkden
+        >
       </p>
     </div>
     <script
