--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mt-5">
-          <img src="/refers/images/yoga.png" class="img-fluid rounded" alt="Yoga app" />
+          <img src="/refers/images/yoga.png" class="img-fluid rounded images" alt="Yoga app" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3 mt-5 headings">Yoga App</h2>
@@ -70,13 +70,13 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="/refers/images/weather.jpg" class="img-fluid rounded" alt="weather app" />
+          <img src="/refers/images/weather.jpg" class="img-fluid rounded images" alt="weather app" />
         </div>
       </div>
       <br/>
       <div class="row">
         <div class="col-md-6 mt-5">
-          <img src="/refers/images/yogurt.png" class="img-fluid rounded" alt="yogurt page"/>
+          <img src="/refers/images/yogurt.png" class="img-fluid rounded images" alt="yogurt page"/>
       </div>
     <div class="col-md-6">
       <h2 class="mt-5 mb-3 headings">Yogurt Page</h2>
@@ -87,7 +87,7 @@
           explicabo eum dolore.
       </p>
       <div class="mt-5">
-          <a href="/" class="third-link" title="Cake app">Launch Yogurt App</a>
+          <a href="/" class="third-link" title="yogurt app">Launch Yogurt App</a>
         </div>
     </div>
     </div>
